# Shipping-Agent-Py

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AGENT_TOOLS.md  ARCHITECTURE.md  PLAN.md  RESOURCES.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ToolStatus.tsx  TypingIndicator.tsx  index.ts
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
frontend/src/hooks/: index.ts  useChat.ts  useHealth.ts  useOrders.ts  useRates.ts  useShipments.ts  useTracking.ts
frontend/src/lib/: carriers.ts  utils.ts
frontend/src/stores/: chatStore.ts  sessionStore.ts  uiStore.ts
src/: __init__.py  cli.py  easypost_client.py  mock.py  parser.py  server.py
src/agent/: __init__.py  agent.py  context.py  tools.py
src/api/: __init__.py  auth.py  chat.py  deps.py  errors.py  health.py  orders.py  schemas.py  shipping.py  webhooks.py
src/auth/: __init__.py  crypto.py  jwt.py  shopify.py
src/db/: __init__.py  alembic.ini  database.py  migrations.py  models.py  repository.py  seed.py
src/db/alembic/: env.py
src/static/: app.js  index.html  styles.css
tests/: test_auth.py  test_db.py  test_error_handling.py  test_mock_client.py  test_order_sync.py  test_parser.py  test_schema_validation.py  test_streaming.py  test_tools.py
tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_chat_flow.py  test_shipping_flow.py
(+24 files in other folders)
