[project]
name = "shipping-agent"
version = "0.1.0"
description = "AI-powered shipping assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "easypost>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
ship = "src.cli:main"
ship-server = "src.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
